<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/ic_launcher_foreground"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_small" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAppearance="@style/MozgalicaTitle"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_large" />

        <EditText
            android:id="@+id/etFullName"
            android:hint="@string/full_name_hint"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_top_spacing"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"/>

        <EditText
            android:id="@+id/etUsername"
            android:hint="@string/username"
            android:inputType="text"
            android:autofillHints="username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginStart="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium">

            <EditText
                android:id="@+id/etPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:autofillHints="password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/input_min_height"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginEnd="@dimen/margin_medium"/>

            <ImageButton
                android:id="@+id/ivTogglePassword"
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/icon_on_card_size"
                android:src="@drawable/visibility_off"
                app:tint="@color/colorPrimary"
                android:background="@android:color/transparent"
                android:contentDescription="@string/show_password_icon" />
        </RelativeLayout>

        <Button
            android:id="@+id/btnRegister"
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/form_top_spacing"
            style="@style/MozgalicaButton"
            android:minWidth="@dimen/login_button_size"/>

        <TextView
            android:id="@+id/tvGoToLogin"
            android:text="@string/go_to_login"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>
