<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="@dimen/main_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="top|center_horizontal">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/app_name"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_small" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAppearance="@style/MozgalicaTitle"
        android:layout_marginTop="@dimen/title_margin_top"
        android:layout_marginBottom="@dimen/title_margin_bottom" />

    <EditText
        android:id="@+id/etLoginUsername"
        android:hint="@string/username"
        android:inputType="text"
        android:autofillHints="username"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/input_min_height"
        android:layout_marginStart="@dimen/input_margin_horizontal"
        android:layout_marginEnd="@dimen/input_margin_horizontal"
        android:layout_marginTop="@dimen/form_top_spacing"
        android:paddingVertical="@dimen/input_padding_vertical" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/input_spacing_vertical"
        android:layout_marginStart="@dimen/input_margin_horizontal"
        android:layout_marginEnd="@dimen/input_margin_horizontal">

        <EditText
            android:id="@+id/etLoginPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textColor="@android:color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/input_min_height"
            android:paddingEnd="@dimen/padding_end_icon"
            android:paddingVertical="@dimen/input_padding_vertical" />

        <ImageView
            android:id="@+id/ivToggleLoginPassword"
            android:layout_width="@dimen/icon_size_medium"
            android:layout_height="@dimen/icon_size_medium"
            android:padding="@dimen/icon_padding"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/icon_margin_end"
            android:src="@drawable/visibility_off"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/show_password_icon"
            android:clickable="true"
            android:focusable="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_top_spacing"
        style="@style/MozgalicaButton" />

    <TextView
        android:id="@+id/tvGoToRegister"
        android:text="@string/go_to_register"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="@dimen/input_min_height"
        android:paddingTop="@dimen/input_padding_vertical"
        android:paddingBottom="@dimen/input_padding_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>
