<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/customToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/icon_size_nav"
            android:layout_height="@dimen/icon_size_nav"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/margin_medium"
            android:src="@drawable/ic_back"
            app:tint="@color/colorOnPrimary"
            android:contentDescription="@string/back"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/tvToolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            android:textColor="@color/colorOnPrimary"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/btnBack"
            android:layout_marginStart="@dimen/margin_title_start" />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero_width"
        android:layout_weight="1">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChangeLanguage"
            style="@style/MozgalicaButton"
            android:text="@string/change_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_medium"
            android:minWidth="@dimen/menu_button_size"
            app:icon="@drawable/ic_language"
            app:iconGravity="textStart"
            app:iconTint="@color/colorOnPrimary"
            app:iconPadding="@dimen/game_button_details_margin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogout"
            style="@style/MozgalicaReverseButton"
            android:text="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/menu_button_size"
            app:icon="@drawable/ic_logout"
            app:iconGravity="textStart"
            app:iconTint="@color/colorPrimary"
            app:iconPadding="@dimen/game_button_details_margin" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomNavBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/white"
        android:paddingTop="@dimen/nav_padding_vertical"
        android:paddingBottom="@dimen/nav_padding_vertical"
        android:weightSum="3"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/navHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large"
                android:src="@drawable/ic_home"
                app:tint="@color/colorPrimary"
                android:contentDescription="@string/home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home"
                android:textSize="@dimen/text_nav_label"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/margin_extra_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navGames"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large"
                android:src="@drawable/ic_games"
                app:tint="@color/colorPrimary"
                android:contentDescription="@string/games" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/games"
                android:textSize="@dimen/text_nav_label"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/margin_extra_small" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/navResults"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true">

            <ImageView
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large"
                android:src="@drawable/ic_results"
                app:tint="@color/colorPrimary"
                android:contentDescription="@string/my_results" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_results"
                android:textSize="@dimen/text_nav_label"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/margin_extra_small" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
